--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,9 +2,7 @@ a {
 	text-decoration: none;
 	color: aliceblue;
 }
-a:hover {
-	color: rgb(209, 215, 221);
-}
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -32,5 +30,10 @@ nav {
 	margin: 0 1rem;
 }
 .nav-item {
-	margin: 0.5rem;
+	padding: 1rem;
+}
+.nav-item:hover {
+	background-color: #01352f;
+	border-radius: 10px;
+	color: rgb(209, 215, 221);
 }
