--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,10 +8,12 @@
 	background-color: #41b3a5;
 	border-radius: 20px;
 	margin: 1rem;
+	box-shadow: 1px 1px 19px black;
+	cursor: pointer;
 }
 .card--img {
 	width: 200px;
-	height: 150px;
+	height: 200px;
 	object-fit: cover;
 	border-radius: 10px;
 }
@@ -26,4 +28,7 @@
 
 .card--title {
 	font-size: 20px;
+}
+.card--description {
+	color: rgb(216, 224, 231);
 }
