--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,7 +1,8 @@
 .list--items {
 	display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	white-space: nowrap;
+	overflow-x: scroll;
 }
 .list--item {
 	margin: 1rem;
