--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -4,6 +4,9 @@
 	white-space: nowrap;
 	overflow-x: scroll;
 }
+.list--items::-webkit-scrollbar {
+	display: none;
+}
 .list--item {
 	margin: 1rem;
 }
