--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,15 +1,20 @@
 .card {
 	width: 196px;
-	height: auto;
-	display: inline-block;
+	display: flex;
+	height: 271px;
 	flex-direction: column;
 	align-items: center;
-	padding: 2rem 0;
+	padding-bottom: 2rem;
 	background-color: white;
 	border-radius: 7px;
 	margin: 0.3rem;
 	box-shadow: 1px 1px 16px #00000017;
 	cursor: pointer;
+	transition: height 0.1s ease;
+}
+
+.card:hover {
+	height: 300px;
 }
 
 .card--title,
