--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -7,14 +7,15 @@
 	padding-bottom: 2rem;
 	background-color: white;
 	border-radius: 7px;
-	margin: 0.3rem;
-	box-shadow: 1px 1px 16px #00000017;
+	margin: 0.5rem 0.3rem;
+
 	cursor: pointer;
-	transition: height 0.1s ease;
+	transition: all 0.1s ease;
 }
 
 .card:hover {
 	height: 300px;
+	box-shadow: 1px 1px 15px #00000017;
 }
 
 .card--title,
