--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,7 @@
 .card {
 	width: 196px;
 	display: flex;
-	height: 271px;
+	height: 221px;
 	flex-direction: column;
 	align-items: center;
 	padding-bottom: 2rem;
@@ -14,8 +14,8 @@
 }
 
 .card:hover {
-	height: 300px;
-	box-shadow: 1px 1px 15px #00000017;
+	/* height: 300px; */
+	box-shadow: 0px 0px 6px #00000017;
 }
 
 .card--title,
@@ -27,11 +27,20 @@
 	margin: 0.2rem;
 }
 
+.card--price {
+	font-size: 23px;
+	font-weight: 100;
+	margin: 0 1rem 0.5rem 1rem;
+}
+
 .card--title {
 	font-size: 20px;
 }
 .card--description {
 	color: rgb(129, 129, 129);
+	font-size: 14px;
+	margin: 0 1rem;
+	letter-spacing: 0.15px;
 }
 
 .card--img {
