--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,3 @@
 body {
-	background-image: url("https://images.unsplash.com/photo-1481437156560-3205f6a55735?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1195&q=80");
-	background-repeat: no-repeat;
-	background-size: cover;
-	backdrop-filter: blur(5px);
-
-	padding-bottom: 1rem;
-	min-height: 1080px;
+	background-color: aliceblue;
 }
