--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -4,7 +4,7 @@
 	overflow-x: scroll;
 	scrollbar-width: none;
 	scroll-behavior: smooth;
-	height: 360px;
+	height: 300px;
 }
 .list--items::-webkit-scrollbar {
 	display: none;
@@ -21,7 +21,7 @@
 }
 .list--box {
 	max-width: 1100px;
-	margin: 2rem auto;
+	margin: 0 auto;
 	padding: 1rem;
 }
 
