--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -20,7 +20,7 @@
 	letter-spacing: 0.2px;
 }
 .list--box {
-	max-width: 1100px;
+	max-width: 1150px;
 	margin: 0 auto;
 	padding: 1rem;
 }
@@ -36,12 +36,9 @@
 	position: absolute;
 	opacity: 0.2;
 	transition: box-shadow 0.2s ease;
+	z-index: 10;
 }
 
-.slider-left-button:hover,
-.slider-right-button:hover {
-	box-shadow: 1px 1px 10px #0000002b;
-}
 .slider-left-button {
 	left: -12px;
 }
@@ -52,6 +49,7 @@
 .slider-left-button:hover,
 .slider-right-button:hover {
 	opacity: 1;
+	box-shadow: 1px 1px 10px #0000002b;
 }
 
 .hidden {
