--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -13,3 +13,34 @@
 	background: #36363638;
 	background-color: #cccccc61;
 }
+
+.cart-price {
+	display: grid;
+	grid-template-columns: 75% 66%;
+	grid-auto-flow: column;
+	position: relative;
+}
+
+.cart-price button {
+	position: absolute;
+	bottom: -124px;
+}
+
+.cart-price--titles,
+.cart-price--counts {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+}
+
+.cart-price--counts h3,
+.cart-price--titles h3 {
+	font-size: 35px;
+	margin: 1rem;
+}
+
+.cart-price--titles h3 {
+	font-size: 25px;
+	margin: 21px 0px;
+	font-weight: 200;
+}
