navList de carrito renderizado cuando tiene items agregados

--- a/src/components/NavListContainer/NavListContainer.css
+++ b/src/components/NavListContainer/NavListContainer.css
@@ -17,6 +17,6 @@
 	border-left: 10px solid transparent;
 	border-bottom: 10px solid rgb(65, 65, 65);
 	position: absolute;
-	top: 0;
+	top: 2px;
 	left: -5.5px;
 }
