--- a/src/components/NavList/NavList.css
+++ b/src/components/NavList/NavList.css
@@ -41,3 +41,21 @@
 	border-radius: 20px;
 	border: 3px solid #414141;
 }
+
+.nav-item-list-box__button {
+	color: aliceblue;
+	border: none;
+	background: none;
+	font-size: 14px;
+	cursor: pointer;
+	padding: 3px 4px;
+}
+
+.nav-item-list-box__header {
+	display: flex;
+	margin: 0px 1rem 5px;
+	color: aliceblue;
+	font-size: 17px;
+	align-items: center;
+	justify-content: space-between;
+}
