--- a/src/components/FullCarousel/FullCarousel.css
+++ b/src/components/FullCarousel/FullCarousel.css
@@ -2,20 +2,21 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin: 0 0.8rem 1rem;
 }
 
 .full-carousel__box .carousel-left {
-	left: 0;
+	left: -12px;
 }
 
 .full-carousel__box .carousel-right {
-	right: 0;
+	right: -12px;
 }
 
 .full-carousel {
 	max-width: 1150px;
 	width: 100%;
 	height: 280px;
-	background-color: blue;
 	position: relative;
+	overflow: hidden;
 }
