--- a/src/components/FullCarousel/FullCarousel.css
+++ b/src/components/FullCarousel/FullCarousel.css
@@ -4,6 +4,10 @@
 	align-items: center;
 	margin: 0 0.8rem 1rem;
 }
+.full-carousel__box .carousel-left,
+.full-carousel__box .carousel-right {
+	top: 6.5rem;
+}
 
 .full-carousel__box .carousel-left {
 	left: -12px;
@@ -18,5 +22,4 @@
 	width: 100%;
 	height: 280px;
 	position: relative;
-	overflow: hidden;
 }
