--- a/src/components/FullCarouselImg/FullCarouselImg.css
+++ b/src/components/FullCarouselImg/FullCarouselImg.css
@@ -1,4 +1,4 @@
-.full-carousel--img-box {
+.full-carousel--img-box .full-carousel__images {
 	display: flex;
 	justify-content: center;
 }
@@ -7,4 +7,8 @@
 	height: 280px;
 	width: 1150px;
 	object-fit: cover;
+}
+
+.full-carousel--img-box {
+	overflow: hidden;
 }
