--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -11,6 +11,7 @@
 	min-width: 200px;
 	border-radius: 7px;
 	margin: 0.2rem;
+	transition: background 0.5s ease;
 }
 .button:hover {
 	cursor: pointer;
