--- a/src/components/CustomButton/CustomButton.css
+++ b/src/components/CustomButton/CustomButton.css
@@ -12,6 +12,7 @@
 	min-height: 40px;
 	border-radius: 7px;
 	margin: 0.2rem;
+	transition: background 0.5s ease;
 }
 .custom-button:hover {
 	cursor: pointer;
