--- a/src/components/GhostButton/GhostButton.css
+++ b/src/components/GhostButton/GhostButton.css
@@ -11,6 +11,7 @@
 	min-width: 200px;
 	border-radius: 7px;
 	margin: 0.2rem;
+	transition: background 0.5s ease;
 }
 .ghost-button:hover {
 	cursor: pointer;
