imgSlide avanzado más estilos sin previsualización

--- a/src/components/CartInstance/CartInstance.css
+++ b/src/components/CartInstance/CartInstance.css
@@ -1,5 +1,5 @@
 .counter-box {
-	background-color: aliceblue;
+	background-color: white;
 	padding: 1rem;
 	display: flex;
 	flex-direction: column;
