--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,9 +1,10 @@
 .detail-item {
 	display: flex;
-	background-color: aliceblue;
+	background-color: white;
 	padding: 2.5rem;
 	border-radius: 15px;
-	width: 930px;
+	max-width: 1150px;
+	width: 100%;
 	justify-content: center;
 	box-shadow: 1px 1px 9px #0000004b;
 }
