--- a/src/components/ImgSlide/ImgSlide.css
+++ b/src/components/ImgSlide/ImgSlide.css
@@ -1,7 +1,7 @@
 .select-imgs__container {
 	display: grid;
 	grid-template-columns: 1fr;
-	padding: 0 0.5rem;
+	padding-right: 0.5rem;
 	background-color: white;
 	gap: 4px;
 	height: 461px;
