--- a/src/components/CartInstance/CartInstance.css
+++ b/src/components/CartInstance/CartInstance.css
@@ -6,6 +6,7 @@
 	justify-content: center;
 	border-radius: 7px;
 	box-shadow: 0px 0px 3px #00000017;
+	height: 433px;
 }
 .counter-box div h3 {
 	margin: 0;
