--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -1,5 +1,6 @@
 .item-detail-container {
 	display: flex;
-	justify-content: center;
-	margin: 3rem;
+	align-items: center;
+	margin: 0 1rem;
+	flex-direction: column;
 }
