--- a/src/components/ImgSlide/ImgSlide.css
+++ b/src/components/ImgSlide/ImgSlide.css
@@ -1,6 +1,7 @@
 .select-imgs__container {
 	display: grid;
 	grid-template-columns: 1fr;
+	grid-auto-rows: 62px;
 	padding-right: 0.5rem;
 	background-color: white;
 	gap: 4px;
