--- a/src/components/CategoryTitle/CategoryTitle.css
+++ b/src/components/CategoryTitle/CategoryTitle.css
@@ -7,6 +7,14 @@
 	margin: 0 0 1rem;
 	display: flex;
 	align-items: end;
+	position: relative;
+}
+
+.category-title__box::before {
+	position: absolute;
+	content: "";
+	inset: 0;
+	background-color: rgba(0, 0, 0, 0.2);
 }
 
 .category-title__box h2 {
@@ -15,4 +23,5 @@
 	font-size: 44px;
 	color: #ffffff;
 	text-shadow: 0px 0px 5px #0000006e;
+	z-index: 1;
 }
